--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,7 +18,7 @@ body {
   height: 100%;
 }
 
-div#battle-navigation-chart {
+div#battle-navigation-div {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
