--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,18 +8,71 @@ html {
   font-weight: 400;
 
   height: 100%;
+  margin: 0;
 }
 
 body {
   margin: 0;            /* Reset default margin */
-  padding:0px;
-  overflow:hidden;
+  padding: 0px;
+  overflow: hidden;
   height: 100%;
 }
-iframe {
-  display: block;       /* iframes are inline by default */
-  background: #000;
-  border: none;         /* Reset default border */
+
+div#battle-navigation-div {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+
+  height: 20%;
+  width: 100%;
+
+  background: tomato;
+  color: white;
+}
+
+div#visualization-wrapper {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  align-content: center;
+
+  height: 80%;
+  width: 100%;
+  color: white;
+}
+
+div#visualizations {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  align-content: center;
+  justify-content: space-evenly;
+
+  width: 70%;
   height: 100%;
-  width: 100vw;
+
+  background: rgb(82, 250, 194);
+  color: white;
+}
+
+div#story {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  
+  width: 30%;
+  height: 100%;
+
+  overflow-y: auto;
+  padding: 2%;
+  padding-top: 0;
+
+  background: rebeccapurple;
+  color: white;
+}
+
+.h1 {
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
