--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,8 +26,10 @@ div#battle-navigation-div {
 
   height: 20%;
   width: 100%;
+  
+  border-bottom: 5px solid white;
 
-  background: tomato;
+  background:  hsl(0, 0%, 21%);
   color: white;
 }
 
@@ -52,7 +54,7 @@ div#map-div {
   width: 70%;
   height: 100%;
 
-  background: rgb(82, 250, 194);
+  background:  hsl(0, 0%, 21%);
   color: white;
 }
 
@@ -65,10 +67,13 @@ div#story {
   height: 100%;
 
   overflow-y: auto;
+  scroll-behavior: smooth;
   padding: 2%;
   padding-top: 0;
 
-  background: rebeccapurple;
+  border-left: 5px solid white;
+
+  background:  hsl(0, 0%, 21%);
   color: white;
 }
 
@@ -79,12 +84,15 @@ div#story {
 
 circle, rect {
   fill: hsl(0, 0%, 50%);
+  transition: fill 1000ms;
 }
 
 circle.done, rect.done {
   fill: hsl(171, 100%, 41%);
+  transition: fill 1000ms;
 }
 
 circle.selected, rect.selected {
   fill: hsl(48, 100%, 67%);
+  transition: fill 1000ms;
 }
