--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,6 +56,8 @@ div#map-div {
 
   background:  hsl(0, 0%, 21%);
   color: white;
+
+  z-index: 0;
 }
 
 div#story {
@@ -95,4 +97,17 @@ circle.done, rect.done {
 circle.selected, rect.selected {
   fill: hsl(48, 100%, 67%);
   transition: fill 1000ms;
+}
+
+.axis-line {
+  stroke: black;
+}
+
+#popupDiv{
+  border: 3px double gray;
+  cursor: move;
+  height: 300px;
+  width: 350px;
+  z-index: 5;
+  background-color: white;
 }
