--- a/src/css/style.css
+++ b/src/css/style.css
@@ -112,16 +112,27 @@ div#popup-div{
   background-color: white;
 }
 
-.countries {
+path.countries {
   fill: #2C2F33;
-  stroke: white;
-  stroke-width: .4;
+  stroke: rgb(194, 193, 193);
+  stroke-width: .175;
 }
 
-.side-axis { 
+path.side-axis { 
   fill: hsl(0, 50%, 50%);
 }
 
-.side-allies {
+path.side-allies {
   fill: #4793B2;
+}
+
+div.inner {
+  position: absolute;
+  width: 13vw;
+  height: 13vw;
+  background: hsl(30, 1%, 30%);
+  opacity: 0.8;
+  left: 57vw;
+
+  border: 1.75px double #2C2F33;
 }
