--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,7 +100,8 @@ circle.selected, rect.selected {
 }
 
 line.axis-line {
-  stroke: black;
+  stroke: white;
+  stroke-width: 2;
 }
 
 div#popup-div{
