--- a/src/css/style.css
+++ b/src/css/style.css
@@ -142,3 +142,16 @@ text.label {
   fill: white;
   font-size: 10px;
 }
+
+div.tooltip {	
+  position: absolute;			
+  text-align: center;			
+  /* width: 60px;					
+  height: 28px;					 */
+  padding: 2px;				
+  font: 12px sans-serif;		
+  background: lightsteelblue;	
+  border: 0px;		
+  border-radius: 2px;			
+  pointer-events: none;			
+}
