--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,7 +100,8 @@ circle.selected, rect.selected {
 }
 
 line.axis-line {
-  stroke: black;
+  stroke: white;
+  stroke-width: 2;
 }
 
 div#popup-div{
@@ -135,4 +136,22 @@ div.inner {
   left: 57vw;
 
   border: 1.75px double #2C2F33;
+}
+
+text.label {
+  fill: white;
+  font-size: 10px;
+}
+
+div.tooltip {	
+  position: absolute;			
+  text-align: center;			
+  /* width: 60px;					
+  height: 28px;					 */
+  padding: 2px;				
+  font: 12px sans-serif;		
+  background: lightsteelblue;	
+  border: 0px;		
+  border-radius: 2px;			
+  pointer-events: none;			
 }
