--- a/src/css/style.css
+++ b/src/css/style.css
@@ -134,7 +134,6 @@ div.inner {
   background: hsl(30, 1%, 30%);
   opacity: 0.8;
   left: 57vw;
-
   border: 1.75px double #2C2F33;
 }
 
@@ -154,4 +153,9 @@ div.tooltip {
   border: 0px;		
   border-radius: 2px;			
   pointer-events: none;			
+}
+
+div.select {
+  position: absolute;
+  z-index: 2;
 }
